# lnd-rpc

./: .dockerignore  .gitignore  Dockerfile  README.md  gen-protos.sh  go.mod  go.sum  setup.cfg  setup.py
.github/workflows/: release-python.yml
scripts/: download  generate-go  generate-python  generate-ruby
v0.10.0/autopilotrpc/: autopilot.pb.go  autopilot.proto  autopilot_pb2.py
v0.10.0/chainrpc/: chainnotifier.pb.go
v0.10.0/invoicesrpc/: invoices.pb.go  invoices.proto  invoices_pb2.py  invoices_pb2_grpc.py
v0.10.0/lnclipb/: __init__.py  lncli.pb.go  lncli.proto  lncli_pb2.py
v0.10.0/lnrpc/: rpc.pb.go  rpc.proto  rpc_pb2.py  rpc_pb2_grpc.py
v0.10.0/routerrpc/: router.pb.go  router.proto  router_pb2.py  router_pb2_grpc.py
v0.10.0/signrpc/: signer.pb.go  signer.proto  signer_pb2.py  signer_pb2_grpc.py
v0.10.0/verrpc/: __init__.py  verrpc.pb.go  verrpc.proto  verrpc_pb2.py  verrpc_pb2_grpc.py
v0.10.0/walletrpc/: walletkit.pb.go  walletkit.proto  walletkit_pb2.py  walletkit_pb2_grpc.py
v0.10.0/watchtowerrpc/: watchtower.pb.go  watchtower.proto  watchtower_pb2.py  watchtower_pb2_grpc.py
v0.5.2/: rpc.pb.go
v0.6.0/: go-diff-to-v0.5.2.patch  proto-diff-to-v0.5.2.patch  rpc.pb.go
v0.6.1/: rpc.pb.go
v0.7.0/: go-diff-to-v0.6.1.patch  proto-diff-to-v0.6.1.patch  rpc.pb.go
v0.7.1/: go-diff-to-v0.7.0.patch  proto-diff-to-v0.7.0.patch  rpc.pb.go
v0.8.0/: go-diff-to-v0.7.1.patch  proto-diff-to-v0.7.1.patch  rpc.pb.go
v0.8.1/: rpc.pb.go
v0.8.2/: rpc.pb.go
v0.9.0/: go-diff-to-v0.8.2.patch  proto-diff-to-v0.8.2.patch  rpc.pb.go
(+272 files in other folders)
